[gd_scene load_steps=2 format=3 uid="uid://bp2xk7wqn8fth"]

[ext_resource type="Script" path="res://scripts/BattleInventoryUI.gd" id="1_battle_inv"]

[node name="BattleInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="OverlayBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="InventoryPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -200.0
offset_right = 700.0
offset_bottom = 200.0

[node name="MainContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="InventoryPanel/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="Title" type="Label" parent="InventoryPanel/MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KAMPF-BEUTEL"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="InventoryPanel/MainContainer/HeaderContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "X"

[node name="ContentContainer" type="HBoxContainer" parent="InventoryPanel/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategoryPanel" type="VBoxContainer" parent="InventoryPanel/MainContainer/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)

[node name="CategoryButtons" type="VBoxContainer" parent="InventoryPanel/MainContainer/ContentContainer/CategoryPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabFanggeraete" type="Button" parent="InventoryPanel/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "ðŸŽ¯ Fangen"

[node name="TabMedizin" type="Button" parent="InventoryPanel/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "ðŸ’Š Medizin"

[node name="TabKampfBoosts" type="Button" parent="InventoryPanel/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "âš¡ Boost"

[node name="ItemListPanel" type="VBoxContainer" parent="InventoryPanel/MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="InventoryPanel/MainContainer/ContentContainer/ItemListPanel"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(200, 0)

[node name="DetailsPanel" type="VBoxContainer" parent="InventoryPanel/MainContainer/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)

[node name="ItemDescription" type="TextEdit" parent="InventoryPanel/MainContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "WÃ¤hle ein Item aus..."
editable = false

[node name="UseButton" type="Button" parent="InventoryPanel/MainContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Benutzen"

[node name="FooterInstructions" type="Label" parent="InventoryPanel/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
text = "[Enter]: Benutzen    [ESC]: ZurÃ¼ck    [Pfeiltasten]: Navigieren"
horizontal_alignment = 1